reflect annotation demo code

--- a/note/1.注解和反射.md
+++ b/note/1.注解和反射.md
@@ -40,3 +40,11 @@ public @interface LongAnnotation {
 	String[] books() default {"红拂夜奔", "绿毛水怪"};
 }
 ```
+
+### 使用反射机制读取注解
+
+#### 一个ORM(Object Relationship Mapping)例子
+1. 类和表结构对应
+2. 属性和字段对应
+3. 对象和记录对应
+
