reflect annotation demo note

--- a/note/1.注解和反射.md
+++ b/note/1.注解和反射.md
@@ -48,3 +48,86 @@ public @interface LongAnnotation {
 2. 属性和字段对应
 3. 对象和记录对应
 
+#### 代码实现
+1. 创建table和field注解类
+```java
+
+@Target(value=ElementType.TYPE)//注解表,设置只能注解到类上
+@Retention(RetentionPolicy.RUNTIME)//设置在运行时有效,可以反射解析
+public @interface LongTable {
+
+	String value();
+}
+
+
+@Target(value = ElementType.FIELD)
+@Retention(RetentionPolicy.RUNTIME)
+public @interface LongField {
+
+	//列名
+	String columnName();
+	
+	//字段类型
+	String type();
+	
+	//字段长度
+	int length();
+}
+
+```
+
+2. 创建对象使用注解
+```java
+@LongTable("tb_student")
+public class LongStudent {
+
+	@LongField(columnName="id", type="int", length=10)
+	private int id;
+	@LongField(columnName="sname", type="varchar", length=10)
+	private String studentName;
+	@LongField(columnName="age", type="int", length=3)
+	private int age;
+
+    // getter and setter
+}
+
+```
+
+3. DEMO运行读取注解
+```java
+/**
+ * 使用反射读取注解信息,模拟处理注解信息的流程
+ * @author whoiszxl
+ *
+ */
+public class App {
+
+	public static void main(String[] args) {
+		
+		try {
+			Class<?> clazz = Class.forName("com.whoiszxl.reflect_annotation_demo.LongStudent");
+			
+			//获取类的所有有效注解
+			Annotation[] annotations = clazz.getAnnotations();
+			for (Annotation annotation : annotations) {
+				System.out.println(annotation.toString());
+			}
+			
+			//获取类的指定注解
+			LongTable annotation = clazz.getAnnotation(LongTable.class);
+			System.out.println(annotation.value());
+			
+			//获取类的属性的注解
+			Field fStudentName = clazz.getDeclaredField("studentName");
+			LongField longField = fStudentName.getAnnotation(LongField.class);
+			System.out.println(longField.columnName()+"--"+longField.length());
+			
+			//可以通过获取的表名字段拼接出SQL语句,使用JDBC可以生成相关的表
+			
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+}
+
+```
