multi reflect type

--- a/note/1.注解和反射.md
+++ b/note/1.注解和反射.md
@@ -131,3 +131,16 @@ public class App {
 }
 
 ```
+
+## 反射
+    
+### 动态语言和静态语言
+1. 程序在运行时候可以动态改变程序结构和变量类型,如php,python.
+ 
+2. java不是动态语言,但是可以使用反射,字节码操作获得类似动态语言的特性,动态性让编程更加灵活了~!
+
+
+### 反射机制
+1. 可以在运行时候加载,使用编译期间完全未知的类.
+2. 程序在运行状态中,可以动态加载一个只有名称的类,都可以获取这个类的所有属性和方法,任意一个对象,对能够调用它的任意一个方法和属性.
+3. 加载完成类之后,在堆内存上,就产生了一个class类型的对象(一个类只有一个class对象),这个对象就像一面镜子,可以看到这个类的整个结构.
