multi reflect type note

--- a/note/1.注解和反射.md
+++ b/note/1.注解和反射.md
@@ -144,3 +144,35 @@ public class App {
 1. 可以在运行时候加载,使用编译期间完全未知的类.
 2. 程序在运行状态中,可以动态加载一个只有名称的类,都可以获取这个类的所有属性和方法,任意一个对象,对能够调用它的任意一个方法和属性.
 3. 加载完成类之后,在堆内存上,就产生了一个class类型的对象(一个类只有一个class对象),这个对象就像一面镜子,可以看到这个类的整个结构.
+
+### 几种反射的类型
+```java
+public class Demo1 {
+	
+	public static void main(String[] args) {
+		
+		String path = "com.whoiszxl.reflect.bean.User";
+		
+		try {
+			//对象是表示或封装一些数据,一个类被加载之后,JVM会创建一个对应该类的class对象,类的整个结构信息会放到对应的class对象中
+			//就像镜子一样咯
+			Class clazz = Class.forName(path);
+			System.out.println(clazz.hashCode());
+			
+			//同一个类反射多次还是同一对象
+			Class clazz2 = Class.forName(path);
+			System.out.println(clazz.hashCode() == clazz2.hashCode()); //true 只有一个对象
+			
+			//String反射也是同一个对象
+			Class strClazz = String.class;
+			System.out.println(strClazz.hashCode() == path.getClass().hashCode());// true String也只有一个对象
+			
+			
+			
+		} catch (ClassNotFoundException e) {
+			e.printStackTrace();
+		}
+		
+	}
+}
+```
