use reflect change field

--- a/note/1.注解和反射.md
+++ b/note/1.注解和反射.md
@@ -176,3 +176,86 @@ public class Demo1 {
 	}
 }
 ```
+
+### 使用反射获取类信息
+```java
+public class Demo2 {
+	
+	public static void main(String[] args) {
+			
+		String path = "com.whoiszxl.reflect.bean.User";
+		
+		try {
+			//对象是表示或封装一些数据,一个类被加载之后,JVM会创建一个对应该类的class对象,类的整个结构信息会放到对应的class对象中
+			//就像镜子一样咯
+			Class clazz = Class.forName(path);
+			
+			//获取类名
+			System.out.println("获得包名+类名:"+clazz.getName());
+			System.out.println("获得类名:"+clazz.getSimpleName());
+			
+			//获取属性信息
+			Field[] fields = clazz.getFields();//只能获取public的field
+			Field[] declaredFields = clazz.getDeclaredFields();//获取到所有的field
+			Field f = clazz.getDeclaredField("username");//通过名称获取field
+			
+			
+			//获取方法信息
+			Method[] methods = clazz.getMethods();//获取public的方法
+			Method[] declaredMethods = clazz.getDeclaredMethods();//获取所有的methods
+			clazz.getDeclaredMethod("getUsername", null);//第二个参数适合使用在有重载函数上,通过设置参数类型区分
+			
+			//获取构造器类型
+			Constructor[] declaredConstructors = clazz.getDeclaredConstructors();//获取所有构造器
+			Constructor declaredConstructor = clazz.getDeclaredConstructor(null);//获得无参构造器
+		
+			
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+		
+	}
+}
+```
+
+### 使用反射操作属性
+```java
+public class Demo3 {
+	public static void main(String[] args) {
+		
+		String path = "com.whoiszxl.reflect.bean.User";
+		
+		try {
+			//对象是表示或封装一些数据,一个类被加载之后,JVM会创建一个对应该类的class对象,类的整个结构信息会放到对应的class对象中
+			//就像镜子一样咯
+			Class clazz = Class.forName(path);
+			
+			//动态构造对象
+			User u1 = (User) clazz.newInstance();//调用了user的无参构造方法,必须要有无参构造器
+			System.out.println(u1);
+			
+			//通过有参构造方法new出对象来
+			Constructor<User> c = clazz.getDeclaredConstructor(int.class,String.class,int.class);
+			User u2 = c.newInstance(1, "周二", 20);
+			System.out.println(u2.getUsername());
+			
+			//通过反射api调用普通方法
+			User u3 = (User) clazz.newInstance();
+			Method method = clazz.getDeclaredMethod("setUsername", String.class);
+			method.invoke(u3, "周三");
+			System.out.println(u3.getUsername());
+			
+			//通过反射API操作属性
+			Field f1 = clazz.getDeclaredField("username");//获取到username的字段
+			f1.setAccessible(true);//设置不用安全检查了,可以直接访问
+			User u4 = (User) clazz.newInstance();//通过class创建一个u4对象
+			f1.set(u4, "周四");//通过字段设置值到对象中
+			System.out.println(u4.getUsername());
+			
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+		
+	}
+}
+```
