--- a/note/1.注解和反射.md
+++ b/note/1.注解和反射.md
@@ -259,3 +259,14 @@ public class Demo3 {
 	}
 }
 ```
+
+### 反射机制的性能问题
+1. setAccessible 是否开启安全检查,true为关闭检查,禁止安全检查,可以提高反射的运行速度.
+2. 可以考虑使用:cglib/javaassist字节码操作
+
+性能问题:普通调用1秒,反射就需要30秒,跳过安全检查的反射只需要7秒.
+
+
+### 反射读取注解
+1. 获取类的注解: `clazz.getAnnotations()`
+2. 获取属性注解: 先通过 `getDeclaredField("filedName)` 获取到属性,再通过`getAnnotations("注解.class")`获取到注解
