three singleton mode

--- a/note/2.设计模式之五种创建型模式.md
+++ b/note/2.设计模式之五种创建型模式.md
@@ -73,3 +73,97 @@ public class SingletonLanhan {
 	
 }
 ```
+
+### 静态内部类模式
+```java
+/**
+ * 单例模式之静态内部类模式
+ * @author Administrator
+ *
+ */
+public class SingletonStaticClass {
+
+	
+	private SingletonStaticClass() {}
+	
+	private static class ClassInstance {
+		private static final SingletonStaticClass INSTANCE = new SingletonStaticClass();
+	}
+	
+	public static SingletonStaticClass getInstance(){
+		return ClassInstance.INSTANCE;
+	}
+}
+```
+
+### 双重检测锁模式
+```java
+/**
+ * 双重检测锁模式
+ * 不推荐使用
+ * @author Administrator
+ *
+ */
+public class SingletonDoubleCheckLock {
+
+	private static SingletonDoubleCheckLock INSTANCE = null;
+	
+	private SingletonDoubleCheckLock() {}
+	
+	public static SingletonDoubleCheckLock getInstance() {
+		//为空的时候就新建一个空对象
+		if(INSTANCE == null){
+			SingletonDoubleCheckLock s;
+			//同步锁住这个类
+			synchronized (SingletonDoubleCheckLock.class) {
+				//将实例赋值给s
+				s = INSTANCE;
+				//如果为空
+				if(s == null) {
+					//同步又锁住
+					synchronized (SingletonDoubleCheckLock.class) {
+						//为空就赋值
+						if(s == null){
+							s = new SingletonDoubleCheckLock();
+						}
+					}
+					//再将实例赋值
+					INSTANCE = s;
+				}
+			}
+		}
+		return INSTANCE;
+	}
+}
+
+```
+
+### 枚举模式
+```java
+/**
+ * 单例模式之枚举模式(天生单例,没懒加载)
+ * @author Administrator
+ *
+ */
+public enum SingletonByEnum {
+
+	INSTANCE;
+	
+	/**
+	 * 自定义操作
+	 * @return
+	 */
+	public String singletonOperation(){
+		return "hello wjj";
+	}
+}
+
+```
+
+### 五种单例模式的效率对比
+1. 饿汉式            22ms
+2. 懒汉式            636ms
+3. 静态内部类式       28ms
+4. 枚举式            32ms
+5. 双重检测锁式       65ms
+
