--- a/note/2.设计模式之五种创建型模式.md
+++ b/note/2.设计模式之五种创建型模式.md
@@ -167,3 +167,36 @@ public enum SingletonByEnum {
 4. 枚举式            32ms
 5. 双重检测锁式       65ms
 
+### 单例模式的漏洞和解决方案
+防止反射和反序列化创建对象
+```java
+/**
+ * 单例模式之静态内部类模式
+ * @author Administrator
+ *
+ */
+public class SingletonStaticClass {
+
+	
+	private SingletonStaticClass() {
+		//防止反射创建
+		if(ClassInstance.INSTANCE != null){
+			throw new RuntimeException();
+		}
+	}
+	
+	private static class ClassInstance {
+		private static final SingletonStaticClass INSTANCE = new SingletonStaticClass();
+	}
+	
+	public static SingletonStaticClass getInstance(){
+		return ClassInstance.INSTANCE;
+	}
+	
+	//防止序列化创建多个对象  定义了 readResolve,则反序列化的时候直接返回这个方法的对象
+	private Object readResolve() throws ObjectStreamException{
+		return ClassInstance.INSTANCE;
+	}
+}
+
+```
