simple factory mode

--- a/Java基础笔记/2.设计模式之五种创建型模式.md
+++ b/Java基础笔记/2.设计模式之五种创建型模式.md
@@ -200,3 +200,26 @@ public class SingletonStaticClass {
 }
 
 ```
+
+## 工厂模式
+作用: 实现了创建者和调用者的分离
+分类: 简单工厂模式,工厂方法模式,抽象工厂模式
+
+
+### 简单工厂模式(静态工厂模式)
+通过特定的标签返回特定的对象
+```java
+public class PhoneFactory {
+	
+	public static Phone createPhone(String name) {
+		if(name.equals("小米")){
+			return new Xiaomi();
+		}else if(name.equals("苹果")){
+			return new Iphone();
+		}
+		return null;
+	}
+	
+}
+```
+
