--- a/MySQL分布式集群/1.主从复制.md
+++ b/MySQL分布式集群/1.主从复制.md
@@ -1,1 +1,25 @@
 # 主从复制
+
+## Linux安装
+下载地址:http://mirrors.163.com/centos/6.9/isos/i386/
+
+## 认识主从复制
+MySQL主从复制的实现原理就是使用binlog日志,主节点负责数据库的写操作,从节点就负责读操作,这样从节点就避免了使用事务,能提高数据库的性能了,然后面临的问题就是从节点如何同步主节点.
+
+
+
+## 了解binlog日志
+
+
+
+
+
+
+
+## 搭建MySQL主从复制
+
+
+
+
+
+## 使用Java演示读写分离操作
