--- a/Java基础笔记/2.设计模式之五种创建型模式.md
+++ b/Java基础笔记/2.设计模式之五种创建型模式.md
@@ -223,3 +223,22 @@ public class PhoneFactory {
 }
 ```
 
+### 方法工厂模式
+给每一个类都创建一个工厂,可以在不修改代码的情况下新增类,缺点是相比简单工厂更复杂了,应用也没有简单工厂多
+
+```java
+public interface MethodPhoneFactory {
+	Phone createPhone();
+}
+
+
+public class XiaomiFactory implements MethodPhoneFactory{
+
+	public Phone createPhone() {
+		return new Xiaomi();
+	}
+
+}
+
+```
+
