abstract factory mode

--- a/Java基础笔记/2.设计模式之五种创建型模式.md
+++ b/Java基础笔记/2.设计模式之五种创建型模式.md
@@ -242,3 +242,7 @@ public class XiaomiFactory implements MethodPhoneFactory{
 
 ```
 
+### 抽象工厂模式
+1. 实现一个抽象工厂接口,里面具有各种抽象方法
+2. 其他的工厂类去实现其方法,可以做出各种配套的创建实例的方法
+
