多环境配置

--- a/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
+++ b/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
@@ -151,6 +151,7 @@ public class Swagger2 {
 
 1. 在resources下面,创建`application-dev.properties` ,
 `application-test.properties` ,然后可以在`application.properties` 中配置 `spring.profiles.active=dev` 来指定环境
+2. 如果将项目打包成了jar,运行如此下命令可以指定启动环境`java -jar xxx.jar --spring.profiles.active=dev`
 
 ## 全局异常JSON配置
 
