--- a/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
+++ b/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
@@ -245,3 +245,55 @@ public class MyException extends Exception{
 "data": "Error Message."
 }
 ```
+
+
+## 使用JDBCTemplate访问数据库
+1. 添加依赖
+```xml
+<!-- jdbc依赖 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-jdbc</artifactId>
+</dependency>
+
+<dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.21</version>
+</dependency>
+```
+
+2. 配置数据库连接
+```conf
+spring.datasource.url=jdbc:mysql://whoiszxl.com:3306/xl_orm?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=xl_orm
+spring.datasource.password=xl_orm
+spring.datasource.driver-class=com.mysql.jdbc.Driver
+```
+
+3. 编写代码使用SQL直接操作数据库
+```java
+/**
+ * 用户数据持久层实现类
+ * @author whoiszxl
+ *
+ */
+@Repository
+public class UserServiceRepoImpl implements UserServiceRepo {
+
+	@Autowired
+	private JdbcTemplate jdbcTemplate;
+	
+	
+	@Override
+	public void createUser(String name, Integer age) {
+		jdbcTemplate.update("insert into users(username, age) values(?,?)",name,age);
+	}
+
+	@Override
+	public void deleteByName(String name) {
+		jdbcTemplate.update("delete from users where username = ?",name);
+	}
+
+}
+```
