使用jpa操作数据库

--- a/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
+++ b/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
@@ -297,3 +297,52 @@ public class UserServiceRepoImpl implements UserServiceRepo {
 
 }
 ```
+
+## 使用JPA访问数据库
+1. 配置依赖
+```xml
+<!-- spring-data-jpa依赖 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+```
+
+2. 配置properties
+```conf
+# create: load hibernate will delete all table,and create table by your current model.
+# create-drop: every load hibernate time will create table by your current model,but sessionFactory close will delete table
+# update: first load hibernate will create table,next load hibernate will update table
+# validate: every load hibernate,validate table struct,only compare with table,not create table,will insert.
+spring.jpa.properties.hibernate.hbm2dll.auto=update
+```
+
+3. 编写JPA接口代码,里面封装了一些基本的增删改查
+```java
+@Repository
+public interface UserRepository extends JpaRepository<Users, Integer>{
+	
+}
+```
+
+4. 使用这个基本的增删改查
+```java
+@Service
+public class UserRepositoryServiceImpl implements UserRepositoryService{
+
+	@Autowired
+	private UserRepository userRepository;
+	
+	@Override
+	public Users createUser(String name, Integer age) {
+		Users user = userRepository.save(new Users(name,age));
+		return user;
+	}
+
+	@Override
+	public List<Users> selectAllUser() {
+		return userRepository.findAll();
+	}
+	
+}
+```
