--- a/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
+++ b/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
@@ -346,3 +346,64 @@ public class UserRepositoryServiceImpl implements UserRepositoryService{
 	
 }
 ```
+
+## 实现多数据源
+1. 配置properties数据源
+```conf
+# config more datasource
+spring.datasource.primary.url=jdbc:mysql://whoiszxl.com:3306/xl_orm?useUnicode=true&characterEncoding=utf-8
+spring.datasource.primary.username=xl_orm
+spring.datasource.primary.password=xl_orm
+spring.datasource.primary.driver-class=com.mysql.jdbc.Driver
+
+spring.datasource.secondary.url=jdbc:mysql://swoole.whoiszxl.com:3306/swoole?useUnicode=true&characterEncoding=utf-8
+spring.datasource.secondary.username=swoole
+spring.datasource.secondary.password=swoole
+spring.datasource.secondary.driver-class=com.mysql.jdbc.Driver
+```
+
+2. 配置Java Configuration
+```java
+@Configuration
+public class DataSourceConfig {
+
+	@Bean(name="primaryDataSource")
+	@Qualifier("primaryDataSource")
+	@ConfigurationProperties(prefix="spring.datasource.primary")
+	public DataSource primaryDataSource() {
+		return DataSourceBuilder.create().build();
+	}
+	
+	@Bean(name="secondaryDataSource")
+	@Qualifier("secondaryDataSource")
+	@Primary
+	@ConfigurationProperties(prefix="spring.datasource.secondary")
+	public DataSource secondaryDataSource() {
+		return DataSourceBuilder.create().build();
+	}
+	
+	//支持jdbcTemplate实现多数据源
+	@Bean(name = "primaryJdbcTemplate")
+	public JdbcTemplate primaryJdbcTemplate(@Qualifier("primaryDataSource") DataSource dataSource) {
+		return new JdbcTemplate(dataSource);
+	}
+
+	//支持jdbcTemplate实现多数据源
+	@Bean(name = "secondaryJdbcTemplate")
+	public JdbcTemplate secondaryJdbcTemplate(@Qualifier("secondaryDataSource") DataSource dataSource) {
+		return new JdbcTemplate(dataSource);
+	}
+	
+}
+```
+
+3. 通过@Autowired注入`secondaryJdbcTemplate`就可以直接使用了
+```java
+@Autowired
+@Qualifier("primaryJdbcTemplate")
+private JdbcTemplate orm_jdbcTemplate;
+
+@Autowired
+@Qualifier("secondaryJdbcTemplate")
+private JdbcTemplate swoole_jdbcTemplate;
+```
