--- a/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
+++ b/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
@@ -347,7 +347,7 @@ public class UserRepositoryServiceImpl implements UserRepositoryService{
 }
 ```
 
-## 实现多数据源
+## JdbcTemplate实现多数据源
 1. 配置properties数据源
 ```conf
 # config more datasource
@@ -407,3 +407,102 @@ private JdbcTemplate orm_jdbcTemplate;
 @Qualifier("secondaryJdbcTemplate")
 private JdbcTemplate swoole_jdbcTemplate;
 ```
+
+## JPA实现多数据源
+1. 增加数据源Java配置类,在basePackages里面指定repository的包路径
+```java
+/**
+ * 主数据源配置
+ * @author whoiszxl
+ *
+ */
+@Configuration
+@EnableTransactionManagement
+@EnableJpaRepositories(
+		entityManagerFactoryRef="entityManagerFactoryPrimary",
+		transactionManagerRef="transactionManagerPrimary",
+		basePackages= {"com.whoiszxl.repo.primary"}
+		)
+public class PrimaryConfig {
+
+	@Autowired
+	@Qualifier("primaryDataSource")
+	private DataSource primaryDataSource;
+	
+	@Primary
+	@Bean(name = "entityManagerFactoryPrimary")
+	public LocalContainerEntityManagerFactoryBean entityManagerFactoryPrimary(EntityManagerFactoryBuilder builder) {
+		return builder
+				.dataSource(primaryDataSource)
+				.properties(getVendorProperties(primaryDataSource))
+				.packages("com.whoiszxl.bean.primary")
+				.persistenceUnit("primaryPersistenceUnit")
+				.build();
+		
+	}
+	
+	@Autowired
+	private JpaProperties jpaProperties;
+	private Map<String, String> getVendorProperties(DataSource dataSource) {
+		return jpaProperties.getHibernateProperties(dataSource);
+	}
+	
+	@Primary
+	@Bean(name = "transactionManagerPrimary")
+	public PlatformTransactionManager transactionManagerPrimary(EntityManagerFactoryBuilder builder) {
+		return new JpaTransactionManager(entityManagerFactoryPrimary(builder).getObject());
+	}
+}
+
+
+
+
+/**
+ * 次数据源配置
+ * @author whoiszxl
+ *
+ */
+@Configuration
+@EnableTransactionManagement
+@EnableJpaRepositories(
+		entityManagerFactoryRef="entityManagerFactorySecondary",
+		transactionManagerRef="transactionManagerSecondary",
+		basePackages= {"com.whoiszxl.repo.secondary"}
+		)
+public class SecondaryConfig {
+
+	@Autowired
+	@Qualifier("secondaryDataSource")
+	private DataSource secondaryDataSource;
+	@Bean(name = "entityManagerSecondary")
+	public EntityManager entityManager(EntityManagerFactoryBuilder builder) {
+		return entityManagerFactorySecondary(builder).getObject().createEntityManager();
+	}
+	
+	@Bean(name = "entityManagerFactorySecondary")
+	public LocalContainerEntityManagerFactoryBean entityManagerFactorySecondary(EntityManagerFactoryBuilder builder) {
+		return builder
+				.dataSource(secondaryDataSource)
+				.properties(getVendorProperties(secondaryDataSource))
+				.packages("com.whoiszxl.bean.secondary")
+				.persistenceUnit("secondaryPersistenceUnit")
+				.build();
+		
+	}
+	
+	@Autowired
+	private JpaProperties jpaProperties;
+	private Map<String, String> getVendorProperties(DataSource dataSource) {
+		return jpaProperties.getHibernateProperties(dataSource);
+	}
+	
+	@Bean(name = "transactionManagerSecondary")
+	public PlatformTransactionManager transactionManagerSecondary(EntityManagerFactoryBuilder builder) {
+		return new JpaTransactionManager(entityManagerFactorySecondary(builder).getObject());
+	}
+}
+
+
+```
+
+2. 配置完成之后就可以使用不同包下的repository类直接操作不同的数据库了
