使用jpa进行分页

--- a/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
+++ b/中小型后台服务架构和运维架构/2.SpringBoot初步环境构建.md
@@ -1,5 +1,17 @@
-# 2.SpringBoot后台代码服务架构
+# SpringBoot后台代码服务架构
+<!-- TOC -->
 
+- [SpringBoot后台代码服务架构](#springboot后台代码服务架构)
+    - [项目创建](#项目创建)
+    - [环境切换](#环境切换)
+    - [全局异常JSON配置](#全局异常json配置)
+    - [使用JDBCTemplate访问数据库](#使用jdbctemplate访问数据库)
+    - [使用JPA访问数据库](#使用jpa访问数据库)
+    - [JdbcTemplate实现多数据源](#jdbctemplate实现多数据源)
+    - [JPA实现多数据源](#jpa实现多数据源)
+    - [使用JPA分页](#使用jpa分页)
+
+<!-- /TOC -->
 
 ## 项目创建
 
@@ -506,3 +518,50 @@ public class SecondaryConfig {
 ```
 
 2. 配置完成之后就可以使用不同包下的repository类直接操作不同的数据库了
+
+## 使用JPA分页
+
+1. JPA接口继承分页接口`JpaSpecificationExecutor`
+```java
+@Repository("starRepository")
+public interface StarRepository extends JpaRepository<Star, Integer>,JpaSpecificationExecutor<Star>{	
+}
+```
+
+2. 通过在JPA的findAll方法中传入page对象达到分页的效果
+```java
+@Service
+public class StarRepositoryServiceImpl implements StarRepositoryService{
+
+	@Autowired
+	private StarRepository starRepository;
+	
+
+	@Override
+	public List<Star> getPageContent(int page, int size) {
+		Pageable pageable = new PageRequest(page, size, Sort.Direction.DESC, "id");
+		
+		return starRepository.findAll(pageable).getContent();
+	}
+
+	@Override
+	public List<Star> getPageContentByName(int page, int size, String name) {
+		Pageable pageable = new PageRequest(page, size);
+		 Page<Star> findAll = starRepository.findAll(new Specification<Star>() {
+			
+			@Override
+			public Predicate toPredicate(Root<Star> root, CriteriaQuery<?> query, CriteriaBuilder cb) {
+				List<Predicate> list = new ArrayList<Predicate>();
+				if(name!=null && name!="") {
+					list.add(cb.like(root.get("starname").as(String.class), "%"+name+"%"));
+				}
+				Predicate[] p = new Predicate[list.size()];
+				return cb.and(list.toArray(p));
+			}
+		},pageable);
+		return findAll.getContent();
+	}
+
+}
+
+```
