--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -1,6 +1,16 @@
 # 从Mybatis开始的一些进阶操作
 
 ## Mybatis配置使用
+0. 添加pom依赖
+```xml
+<!-- mybatis配置 -->
+<dependency>
+	<groupId>org.mybatis.spring.boot</groupId>
+	<artifactId>mybatis-spring-boot-starter</artifactId>
+	<version>1.3.1</version>
+</dependency>
+```
+
 1. XML配置
 ```xml
 <?xml version="1.0" encoding="UTF-8" ?>  
@@ -93,4 +103,74 @@ public interface PeopleMapper {
 	@Delete("delete from people where id = {#id}")
 	int delete(Long id);
 }
+```
+
+## 集成Redis
+0. 添加pom依赖
+```xml
+<!-- 配置Redis依赖 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-data-redis</artifactId>
+</dependency>
+```
+
+2. 封装常用操作`RedisUtil.java`
+3. 操作对象配置,通过将对象序列化存储到Redis中,对象必须实现序列化接口.
+```java
+@Configuration
+public class RedisConfig {
+	
+	@Bean
+	public RedisTemplate<String, Star> redisTemplate(RedisConnectionFactory factory) {
+		RedisTemplate<String, Star> template = new RedisTemplate<String, Star>();
+		template.setConnectionFactory(factory);
+		template.setKeySerializer(new StringRedisSerializer());
+		template.setValueSerializer(new RedisObjectSerializer());
+		
+		return template;
+	}
+}
+
+
+/**
+ * redis对象序列化
+ * @author whoiszxl
+ *
+ */
+public class RedisObjectSerializer implements RedisSerializer<Object>{
+
+	private Converter<Object, byte[]> serializer = new SerializingConverter();
+	private Converter<byte[], Object> deserializer = new DeserializingConverter();
+	static final byte[] EMPTY_ARRAY = new byte[0];
+	
+	@Override
+	public Object deserialize(byte[] bytes) throws SerializationException {
+		if(isEmpty(bytes)) {
+			return null;
+		}
+		try {
+			return deserializer.convert(bytes);
+		} catch (Exception e) {
+			throw new SerializationException("不能反序列",e);
+		}
+	}
+
+	@Override
+	public byte[] serialize(Object object) throws SerializationException {
+		if(object == null) {
+			return EMPTY_ARRAY;
+		}
+		try {
+			return serializer.convert(object);
+		} catch (Exception e) {
+			return EMPTY_ARRAY;
+		}
+	}
+	
+	private boolean isEmpty(byte[] bytes) {
+		return (bytes == null || bytes.length == 0);
+	}
+}
+
 ```
