暂时先跳过mongodb

--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -174,3 +174,32 @@ public class RedisObjectSerializer implements RedisSerializer<Object>{
 }
 
 ```
+
+## 集成Mongodb
+1. 配置pom依赖
+```xml
+<!-- 连接mongodb -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-data-mongodb</artifactId>
+</dependency>
+```
+
+2. 给mongodb设置user
+
+```conf
+//配置root权限
+1. 'mongo' 进入
+2. 切换到 'admin' 数据库 use admin
+3. 给admin设置用户密码:db.createUser({user: 'root', pwd: '123456', roles: ['root']})
+4. 验证是否添加成功，'db.auth(用户名，用户密码)' 这里用db.auth('root', '123456') 如果返回 '1'表示验证成功， 如果是 '0' 表示验证失败...
+```
+
+```conf
+//给特定的每个库设置权限
+1. use Article 切换到特定库
+2. db.createUser({user:'whoiszxl',pwd:'111111',roles: [{role:'readWrite',db:'Article'}]})})
+3. 连接加密数据库 xxx.db('mongodb://your name: your pwd@ ip :27017/Article');
+```
+
+3. //TODO 暂时先跳过
