--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -203,3 +203,31 @@ public class RedisObjectSerializer implements RedisSerializer<Object>{
 ```
 
 3. //TODO 暂时先跳过
+
+
+## 使用事务管理数据操作
+1. 使用注解指定数据源事务管理:`@Transactional(value="transactionManagerSecondary")`
+```java
+@Transactional(value="transactionManagerSecondary")//开启事务,指定第二个数据源的事务管理
+public int CreateStar(String starname) {
+	starRepository.save(new Star(starname));
+	
+	/*********事务测试*************/
+	
+	starRepository.save(new Star("事务测试罗事务测试罗事务测试罗事务测试罗事务测试罗事务测试罗事务测试罗事务测试罗事务测试罗事务测试罗"));
+	
+	/**************************/
+	return 1;
+}
+
+@Test
+public void testTran() throws Exception {
+	try {
+		starRepositoryService.CreateStar("事务测试");
+	} catch (Exception e) {
+		//手动回滚,测试的时候没设置这个也实现了回滚..
+		TransactionAspectSupport.currentTransactionStatus().setRollbackOnly();
+		e.printStackTrace();
+	}
+}
+```
