--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -231,3 +231,36 @@ public void testTran() throws Exception {
 	}
 }
 ```
+
+## 使用Springboot实现定时任务
+1. 在Springboot入口添加注解`@EnableScheduling //开启定时任务`
+2. 配置定时任务的Java配置
+```java
+/**
+ * 定时任务
+ * @author whoiszxl
+ *
+ */
+@Component
+public class ScheduledTasks {
+
+	
+	private static final SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("HH:mm:ss");
+	
+	@Autowired
+	private StarRepositoryService repositoryService;
+	
+	@Scheduled(fixedRate=3000)
+	/**
+	 * @Scheduled(fixedRate=3000) :上一次开始执行时间点自后3秒再执行
+	 * @Scheduled(fixedDelay=3000) :上一次执行完毕时间点之后3秒再执行
+	 * @Scheduled(initialDelay=1000,fixedRate=3000) :第一次延迟1秒执行,之后按上一次开始执行时间点自后3秒再执行
+	 */
+	//@Scheduled(cron="*/1 * * * * *") linux crontab表达式定义规则
+	public void showCurrentTime() {
+		System.out.println("时间为:"+DATE_FORMAT.format(new Date()));
+		repositoryService.CreateStar("定时");
+	}
+	
+}
+```
