--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -264,3 +264,75 @@ public class ScheduledTasks {
 	
 }
 ```
+
+## Springboot开启异步任务
+1. 在Springboot入口添加注解`@EnableAsync //开启异步调用`
+2. 编写异步任务类
+```java
+@Component
+public class AsyncTask {
+
+	//@Async修饰的函数不能用static
+	
+	//异步回调,不返回数据
+	@Async
+	public void dealNotReturnTask() {
+		System.out.println("Thread {} deal no return task start     "+Thread.currentThread().getName());
+		try {
+			Thread.sleep(3000);
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+		System.out.println("Thread {} deal no return task end     "+Thread.currentThread().getName()+"  "+System.currentTimeMillis());
+	}
+	
+	
+	//异步回调,返回数据
+	@Async
+	public Future<String> dealHaveReturnTask() {
+		try {
+			Thread.sleep(4000);
+		} catch (InterruptedException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		return new AsyncResult<String>("异步回调返回数据");
+	}
+
+}
+```
+
+3. 实际调用
+```java
+/**
+ * 异步测试
+ * @throws Exception
+ */
+@Test
+public void testAsync() throws Exception {
+	//不带返回值调用
+    //asyncTask.dealNotReturnTask();
+    //System.out.println("main task run....");
+    //Thread.sleep(4000);
+	
+	//带返回值调用
+	Future<String> future = asyncTask.dealHaveReturnTask();
+	System.out.println("开始调用主任务");
+	
+	while(true) {
+		if(future.isCancelled()) {
+			System.out.println("异步任务被取消了");
+			break;
+		}
+		
+		if(future.isDone()) {
+			System.out.println("异步任务执行完成了");
+			System.out.println("异步任务的返回值是:"+future.get());
+			break;
+		}
+		
+		System.out.println("等待异步任务结束");
+		Thread.sleep(1000);
+	}
+}
+```
