--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -336,3 +336,67 @@ public void testAsync() throws Exception {
 	}
 }
 ```
+
+## SpringBoot默认日志记录
+1. 切换到debug级别
+```
+a. 在运行命令的时候加入--debug,例如:java -jar project.jar --debug
+b. application.properties配置debug=true
+```
+
+2. 配置将日志记录到文件中
+```
+a. logging.file : 设置文件,可以使用绝对路径和相对路径
+b. logging.path : 设置目录,会在该目录下生成spring.log文件,一个文件最大10MB
+c. window下路径示例:logging.file=D:\\spring.log
+```
+
+## 使用Log4j记录日志
+1. 添加pom依赖和移除springboot自带的logger
+```xml
+<!-- log4j日志 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-log4j</artifactId>
+	<version>1.3.8.RELEASE</version>
+</dependency>
+
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter</artifactId>
+	<exclusions>
+		<exclusion>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+		</exclusion>
+	</exclusions>
+</dependency>
+```
+
+2. 配置log4j.properties配置
+```conf
+### 设置###
+log4j.rootLogger = INFO, stdout, D, E
+
+### 输出信息到控制抬 ###
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+
+
+### 输出DEBUG 级别以上的日志到=D://logs//log.log ###
+log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.D.File = D://logs//log.log
+log4j.appender.D.Append = true
+log4j.appender.D.Threshold = DEBUG 
+log4j.appender.D.layout = org.apache.log4j.PatternLayout
+log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+### 输出ERROR 级别以上的日志到=D://logs//error.log  ###
+log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.E.File =D://logs//error.log 
+log4j.appender.E.Append = true
+log4j.appender.E.Threshold = ERROR 
+log4j.appender.E.layout = org.apache.log4j.PatternLayout
+log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+```
