配置日志写入mongodb

--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -400,3 +400,162 @@ log4j.appender.E.Threshold = ERROR
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 ```
+
+## 将日志记录到mongodb中
+0. 添加AOP切面编程依赖
+```xml
+<!-- 连接mongodb存储日志,AOP依赖 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-aop</artifactId>
+</dependency>
+```	
+
+1. log4j.properties配置mongodb
+```conf
+### config mongodb save log ###
+log4j.logger.mongodb=INFO, mongodb
+
+log4j.appender.mongodb=com.whoiszxl.log.MongoAppender
+log4j.appender.mongodb.connectionUrl=mongodb://whoiszxl.com:27017/apple
+log4j.appender.mongodb.databaseName=apple
+log4j.appender.mongodb.collectionName=sb_log
+```
+
+2. 配置Log附加配置
+```java
+/**
+ * mongodb写入日志配置
+ * @author whoiszxl
+ *
+ */
+public class MongoAppender  extends AppenderSkeleton {
+
+    private MongoClient mongoClient;
+    private MongoDatabase mongoDatabase;
+    private MongoCollection<BasicDBObject> logsCollection;
+
+    private String connectionUrl;
+    private String databaseName;
+    private String collectionName;
+
+    @Override
+    protected void append(LoggingEvent loggingEvent) {
+
+        if(mongoDatabase == null) {
+            MongoClientURI connectionString = new MongoClientURI(connectionUrl);
+            mongoClient = new MongoClient(connectionString);
+            mongoDatabase = mongoClient.getDatabase(databaseName);
+            logsCollection = mongoDatabase.getCollection(collectionName, BasicDBObject.class);
+        }
+        logsCollection.insertOne((BasicDBObject) loggingEvent.getMessage());
+
+    }
+
+    @Override
+    public void close() {
+        if(mongoClient != null) {
+            mongoClient.close();
+        }
+    }
+
+    @Override
+    public boolean requiresLayout() {
+        return false;
+    }
+
+    public String getConnectionUrl() {
+        return connectionUrl;
+    }
+
+    public void setConnectionUrl(String connectionUrl) {
+        this.connectionUrl = connectionUrl;
+    }
+
+    public String getDatabaseName() {
+        return databaseName;
+    }
+
+    public void setDatabaseName(String databaseName) {
+        this.databaseName = databaseName;
+    }
+
+    public String getCollectionName() {
+        return collectionName;
+    }
+
+    public void setCollectionName(String collectionName) {
+        this.collectionName = collectionName;
+    }
+
+}
+
+```
+
+3. 配置切面切取控制器访问日志
+```java
+/**
+ * 日志记录切面
+ * @author whoiszxl
+ *
+ */
+@Aspect
+@Order(1)
+@Component
+public class WebLogAspect {
+
+	private Logger logger = Logger.getLogger("mongodb");
+	
+	@Pointcut("execution(public * com.whoiszxl.controller..*.*(..))")
+	public void webLog() {}
+	
+	@Before("webLog()")
+	public void doBefore(JoinPoint joinPoint) throws Throwable {
+		System.out.println("执行了这个aop方法了::::::WebLogAspect.doBefore()");
+		//获取httpservletrequest
+		ServletRequestAttributes attributes = (ServletRequestAttributes)RequestContextHolder.getRequestAttributes();
+		HttpServletRequest request = attributes.getRequest();
+		
+		//获取要记录的日志内容
+		BasicDBObject logInfo = getBasicDBObject(request, joinPoint);
+		logger.info(logInfo);
+	}
+
+	private BasicDBObject getBasicDBObject(HttpServletRequest request, JoinPoint joinPoint) {
+        // 基本信息
+        BasicDBObject r = new BasicDBObject();
+        r.append("requestURL", request.getRequestURL().toString());
+        r.append("requestURI", request.getRequestURI());
+        r.append("queryString", request.getQueryString());
+        r.append("remoteAddr", request.getRemoteAddr());
+        r.append("remoteHost", request.getRemoteHost());
+        r.append("remotePort", request.getRemotePort());
+        r.append("localAddr", request.getLocalAddr());
+        r.append("localName", request.getLocalName());
+        r.append("method", request.getMethod());
+        r.append("headers", getHeadersInfo(request));
+        r.append("parameters", request.getParameterMap());
+        r.append("classMethod", joinPoint.getSignature().getDeclaringTypeName() + "." + joinPoint.getSignature().getName());
+        r.append("args", Arrays.toString(joinPoint.getArgs()));
+        return r;
+    }
+
+    /**
+     * 获取头信息
+     *
+     * @param request
+     * @return
+     */
+    private Map<String, String> getHeadersInfo(HttpServletRequest request) {
+        Map<String, String> map = new HashMap<>();
+        Enumeration headerNames = request.getHeaderNames();
+        while (headerNames.hasMoreElements()) {
+            String key = (String) headerNames.nextElement();
+            String value = request.getHeader(key);
+            map.put(key, value);
+        }
+        return map;
+    }
+}
+
+```
