redis缓存查询数据

--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -607,3 +607,37 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter{
 }
 
 ```
+
+## 使用redis做缓存
+1. 配置依赖
+```xml
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-cache</artifactId>
+</dependency>
+
+<!-- 使用redis做缓存依赖 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-data-redis</artifactId>
+</dependency>
+```
+
+2. 启动类上加入开启注解`@EnableCaching //开启ehcache缓存`
+3. 数据操作类和方法上添加注解
+```java
+/**
+ * 从数据源的数据库操作
+ * @author whoiszxl
+ *
+ */
+@CacheConfig(cacheNames="star_cache1")//缓存会存到star_cache1这个缓存对象中去
+public interface StarRepository extends JpaRepository<Star, Integer>,JpaSpecificationExecutor<Star>{
+	
+	/**
+	 * @Cacheable查询的时候先从缓存中查,查不到就从数据库查询
+	 */
+	@Cacheable
+	List<Star> findByStarname(String starname);
+}
+```
