--- a/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
+++ b/中小型后台服务架构和运维架构/3.从Mybatis开始的一些进阶操作.md
@@ -641,3 +641,80 @@ public interface StarRepository extends JpaRepository<Star, Integer>,JpaSpecific
 	List<Star> findByStarname(String starname);
 }
 ```
+
+## 发送邮件
+1. 添加依赖
+```xml
+<!-- 发送邮件依赖 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-mail</artifactId>
+</dependency>
+
+<!-- 使用Velocity模板引擎渲染web视图 -->
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-velocity</artifactId>
+</dependency>
+```
+
+2. application.properties添加mail配置
+```conf
+# email
+spring.mail.host=smtp.qq.com
+spring.mail.username=619563988
+spring.mail.password=123qwe!@#
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+```
+
+3. 邮件发送代码
+```java
+	@Autowired
+	private JavaMailSender javaMailSender;
+	
+	@Autowired
+	private VelocityEngine velocityEngine;
+	
+	@Test
+	public void testEmail() throws Exception {
+		//发送一个简单的邮件
+//		SimpleMailMessage message=new SimpleMailMessage();
+//		message.setFrom("619563988@qq.com");
+//		message.setTo("zxlme@foxmail.com");
+//		message.setSubject("主题：测试邮件发送，简单发送");
+//		message.setText("测试邮件简单发送的内容");
+//		javaMailSender.send(message);
+		
+		//发送一个带有附件的邮件
+//		MimeMessage message=javaMailSender.createMimeMessage();
+//		
+//		MimeMessageHelper helper=new MimeMessageHelper(message,true);
+//		helper.setFrom("619563988@qq.com");
+//		helper.setTo("zxlme@foxmail.com");
+//		helper.setSubject("主题：测试邮件发送，带有附件的发送");
+//		//helper.setText("测试邮件简单发送的内容，带有附件");
+//		helper.setText("<html><body><img src=\"cid:tupian\"></body></html>",true);
+//		
+//		FileSystemResource file=new FileSystemResource(new File("I:\\findnothingdouble.jpg"));
+//		//helper.addAttachment("图片.jpg", file);
+//		helper.addInline("tupian", file);
+//		javaMailSender.send(message);
+		
+		
+		//发送模板邮件
+		MimeMessage message=javaMailSender.createMimeMessage();		
+		MimeMessageHelper helper=new MimeMessageHelper(message,true);
+		helper.setFrom("619563988@qq.com");
+		helper.setTo("zxlme@foxmail.com");
+		helper.setSubject("主题：测试邮件发送，发送模板邮件");
+        Map<String,Object> model=new HashedMap();
+        model.put("username", "whoiszxl");
+        String text=VelocityEngineUtils.mergeTemplateIntoString(velocityEngine, "template.vm", model);
+		helper.setText(text,true);
+		
+		
+		javaMailSender.send(message);
+	}
+```
