--- a/中小型后台服务架构和运维架构/4.认识JVM,Redis进阶操作和Git.md
+++ b/中小型后台服务架构和运维架构/4.认识JVM,Redis进阶操作和Git.md
@@ -6,3 +6,27 @@
 
 ![](images/jvm_content.png)
 
+## JVM内存机制和参数配置
+
+### 1.加载
+1. 通过类的全限定名获取定义此类的二级制字节流
+2. 将这个字节流所代表的静态存储结构转化为方法区的运行时数据结构
+3. 在内存中生成一个代表这个类的java.lang.Class对象,作为方法区这个类的各种数据的访问入口
+
+
+### 2.验证
+为了确保class文件的字节流中包含的信息符合当前虚拟机的要求
+
+1. 文件格式验证: 验证字节流是否符合class文件格式的规范
+2. 元数据验证: 对字节码描述的信息进行语义分析
+3. 字节码验证: 通过数据流和控制流分析,确定程序语义是合法的,符合逻辑的
+4. 符号引用验证: 发生在虚拟机将符号引用转化为直接引用的时候
+
+### 3.准备
+准备阶段是正式为类变量分配内存并设置类变量初始值的阶段,主要针对静态变量
+
+### 4.解析
+虚拟机将常量池内的符号引用替换为直接引用的过程
+
+### 5.初始化
+类初始化阶段是类加载过程中的最后一步,这个才是开始执行类中定义的Java程序代码,在准备阶段,变量已经赋过一次系统要求的初始值,而在初始化阶段,则根据程序员指定的主观计划去初始化类变量和其它资源.
