--- a/中小型后台服务架构和运维架构/4.认识JVM,Redis集群搭建和Git.md
+++ b/中小型后台服务架构和运维架构/4.认识JVM,Redis集群搭建和Git.md
@@ -193,3 +193,72 @@ appendonly yes
 
 3. `chkconfig --add redis`注册为服务
 4. 将Redis添加到环境变量中：`vi /etc/profile`,在最后添加以下内容: `export PATH=$PATH:/usr/local/redis3/bin` ,使配置生效:`source /etc/profile`
+
+## Git
+
+### 1.配置名字和邮箱
+安装 Git 之后，第一件事情就是去配置名字和邮箱，每一次提交都需要这些信息
+```
+git config --global user.name "whoiszxl"
+git config --global user.email whoiszxl@gmail.com
+查看仓库状态：git status
+查看历史揭露：git log
+```
+
+### 2.创建版本库
+什么是版本库呢？版本库又名仓库，英文名repository，你可以简单理解成一个目录，这个目录里面的所有文件都可以被Git管理起来，每个文件的修改、删除，Git都能跟踪，以便任何时刻都可以追踪历史，或者在将来某个时刻可以“还原”
+```s
+mkdir testgit && cd testgit
+git init
+```
+
+### 3.把文件添加到版本库
+`touch readme.md && git add readme.md && git commit -m "init readme"`
+
+### 4.回退到上一个版本或者任意版本
+在 Git中，用HEAD表示当前版本，也就是最新的提交commit id，上一个版本就是HEAD^，上上一个版本就是HEAD^^，当然往上100个版本写100个^比较容易数不过来，所以写成HEAD~100。
+
+现在我们要把当前版本回退到上一个版本，就可以使用git reset命令：`git reset --hard HEAD^`
+
+如果想回到最新的版本，或者指定的版本用如下命令：`git reset --hard 2e70fdf`
+
+`git reflog`用来记录你的每一次命令
+
+### 5.工作区和暂存区
+1. 第一步是用git add把文件添加进去，实际上就是把文件修改添加到暂存区；
+2. 第二步是用git commit提交更改，实际上就是把暂存区的所有内容提交到当前分支。
+3. 因为我们创建Git版本库时，Git自动为我们创建了唯一一个master分支，所以现在git commit就是往master分支上提交更改。
+4. 你可以简单理解为，git add命令实际上就是把要提交的所有修改放到暂存区（Stage），然后执行git commit就可以一次性把暂存区的所有修改提交到分支。
+5. 一旦提交后，如果你又没有对工作区做任何修改，那么工作区就是“干净”的。
+
+### 6.修改与撤销
+1. 用`git diff HEAD -- readme.md`命令可以查看工作区和版本库里面最新版本的区别。
+2. `git checkout -- file`可以丢弃工作区的修改
+3. 命令`git checkout -- readme.md`意思就是，把readme.md文件在工作区的修改全部撤销，即让这个文件回到最近一次`git commit`或`git add`时的状态，当然也可以用`git reset`命令。
+
+### 7.删除文件
+1. 一般情况下，你通常直接在文件管理器中把没用的文件删了，或者用rm命令删了：`rm readme.md`
+2. 这个时候，Git 知道你删除了文件，因此，工作区和版本库就不一致了，`git status`命令会立刻告诉你哪些文件被删除了。
+3. 现在你有两个选择，一是确实要从版本库中删除该文件，那就用命令git rm删掉，并且`git commit`：`git rm readme.md && git commit -m "remove readme.md"`
+4. 另一种情况是删错了，因为版本库里还有呢，所以可以很轻松地把误删的文件恢复到最新版本：`git checkout -- readme.md`
+
+### 8.生成key
+1. `ssh-keygen -t rsa -C "whoiszxl@gmail.com"`生成key
+2. 然后登录GitHub（或者其它Git代码托管平台），打开Account settings，SSH Keys页面，点Add SSH Key，填上任意Title，在Key文本框里粘贴id_rsa.pub文件的内容。
+
+### 9.连接远程服务器
+Git 最强大的功能之一是可以有一个以上的远程服务器（另一个事实，你总是可以运行一个本地仓库）。你不一定总是需要写访问权限，你可以从多个服务器中读取（用于合并），然后写到另一个服务器中。添加一个远程服务器很简单：`git remote add origin git@github.com:whoiszxl/who.git`
+
+### 10.创建与合并分支
+1. 首先我们创建dev分支，然后切换到dev分支：`git checkout -b dev`, `git checkout`命令加上-b参数表示创建并切换，相当于以下两条命令：`git branch dev && git checkout dev`
+2. 然后用git branch命令查看当前分支： `git branch`
+3. 我们在dev分支上进行添加修改操作，然后我们把dev分支的工作成果合并到master分支上：`git checkout master` `git merge dev`,git merge命令用于合并指定分支到当前分支。
+4. 注意到git merge的信息里面可能有Fast-forward字样，Git告诉我们，这次合并是“快进模式”，也就是直接把master指向dev的当前提交，所以合并速度非常快。当然也不是每次合并都能Fast-forward。
+5. 合并完成后，就可以放心地删除dev分支了：`git branch -d dev`
+6. 如果要丢弃一个没有被合并过的分支，可以通过`git branch -D <branch>`强行删除。
+7. 在本地创建和远程分支对应的分支，使用`git checkout -b branch-name origin/branch-name`，本地和远程分支的名称最好一致；
+8. 建立本地分支和远程分支的关联，使用 `git branch --set-upstream-to=origin/<branch> mymaster`；
+9. 从远程抓取分支，使用`git pull`，如果有冲突，要先处理冲突。
+
+### 11.标签管理
+发布一个版本时，我们通常先在版本库中打一个标签，这样，就唯一确定了打标签时刻的版本。将来无论什么时候，取某个标签的版本，就是把那个打标签的时刻的历史版本取出来。所以，标签也是版本库的一个快照。
