eureka代码和笔记

--- a/SpringCloud微服务/1.SpringCloud微服务的注册与发现.md
+++ b/SpringCloud微服务/1.SpringCloud微服务的注册与发现.md
@@ -7,4 +7,16 @@
     2. Eureka Client服务注册
 
 ### Eureka Server注册中心
-
+1. 通过springboot项目创建选项创建一个springboot项目,选择Eureka Server依赖
+2. 在springboot启动入口添加开启eureka服务的注解 `@EnableEurekaServer`
+3. 配置server配置
+```yml
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: false
+spring:
+  application:
+    name: eureka
+```
