--- a/SpringCloud微服务/1.SpringCloud微服务的注册与发现.md
+++ b/SpringCloud微服务/1.SpringCloud微服务的注册与发现.md
@@ -20,3 +20,27 @@ spring:
   application:
     name: eureka
 ```
+
+### Eureka Client服务注册
+1. 通过springboot项目创建选项创建一个springboot项目,选择discovery client依赖
+2. 在springboot启动入口添加开启eureka服务的注解 `@EnableDiscoveryClient`
+3. 配置client配置
+```yml
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+#  instance:
+#    hostname: clientName 设置访问ip的别名
+      
+spring:
+  application:
+    name: client
+```
+4. 运行时可能会无法启动http服务,需要添加一个pom依赖
+```xml
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-web</artifactId>
+</dependency>
+```
