--- a/SpringCloud微服务/1.SpringCloud微服务的注册与发现.md
+++ b/SpringCloud微服务/1.SpringCloud微服务的注册与发现.md
@@ -44,3 +44,10 @@ spring:
 	<artifactId>spring-boot-starter-web</artifactId>
 </dependency>
 ```
+
+### Eureka高可用
+1. 配置端口8761启动的eureka.client.service-url.defaultZone为其它两个`http://localhost:8762/eureka/,http://localhost:8763/eureka/`
+2. 配置端口8762启动的eureka.client.service-url.defaultZone为其它两个`http://localhost:8761/eureka/,http://localhost:8763/eureka/`
+3. 配置端口8763启动的eureka.client.service-url.defaultZone为其它两个`http://localhost:8761/eureka/,http://localhost:8762/eureka/`
+4. 配置注册的client端口的eureka.client.service-url.defaultZone为三个注册服务`http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/`
+5. eureka server启动后会互相注册,达到高可用的效果
