zk目录和配置文件介绍

--- a/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
+++ b/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
@@ -28,3 +28,35 @@ export JRE_HOME=/usr/local/java8/jre
 export CLASSPATH=.:$CLASSPATH:$JAVA_HOME/lib:$JRE_HOME/lib
 export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin:$ZK_HOME/bin
 ```
+
+## Zookeeper文件夹主要目录介绍
+1. bin: 包含一些常用的命令
+2. conf: 存放一些配置文件,其中需要修改zk.cfg
+3. contrib: 附加的一些功能
+4. dist-maven: mvn编译后的目录
+5. docs: 文档
+6. lib: 需要依赖的jar包,做java api客户端的时候需要用到
+7. recipes: 案例demo代码
+8. src: 源码
+
+## zoo.cfg配置
+
+### 1.tickTime
+tick翻译成中文的话就是滴答滴答的意思，连起来就是滴答滴答的时间，寓意心跳间隔，单位是毫秒，系统默认是2000毫秒，就是间隔两秒心跳一次.
+
+tickTime的意义：客户端与服务器或者服务器与服务器之间维持心跳，也就是每个tickTime时间就会发送一次心跳。通过心跳仅能够用来监听机器的工作状态，还可以通过心跳来控制Flower跟Leader的通信时间，默认情况下FL的会话时常是心跳间隔的倍。
+
+### 2.initLimit
+集群中的follower服务器(F)与leader服务器(L)之间初始连接时能容忍的最多心跳数（tickTime的数量）。
+
+### 3.syncLimit
+集群中flower服务器（F）跟leader（L）服务器之间的请求和答应最多能容忍的心跳数。
+
+### 4.dataDir
+该属性对应的目录是用来存放myid信息跟一些版本，日志，跟服务器唯一的ID信息等。
+
+### 5.dataLogDir
+日志目录,如果不配置会和dataDir共用
+
+### 6.clientPort
+客户端连接的接口，客户端连接zookeeper服务器的端口，zookeeper会监听这个端口，接收客户端的请求访问！这个端口默认2181。
