zk基本数据模型

--- a/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
+++ b/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
@@ -60,3 +60,13 @@ tickTime的意义：客户端与服务器或者服务器与服务器之间维持
 
 ### 6.clientPort
 客户端连接的接口，客户端连接zookeeper服务器的端口，zookeeper会监听这个端口，接收客户端的请求访问！这个端口默认2181。
+
+## Zookeeper基本数据模型
+1. 是一个树形结构,类似于Linux的目录结构
+2. 每一个节点称之为znode,它可以有子节点,也可以有数据
+3. 每个节点分为临时节点和永久节点,临时节点在客户端断开后消失
+4. 每个zk节点都有各自的版本号,可以通过命令行来显示节点信息
+5. 每当节点数据发生变化,那么该节点的版本号会累加(乐观锁)
+6. 删除/修改过时节点,版本号不匹配则会报错
+7. 每个zk节点存储数据不宜过大,几K即可
+8. 节点可以设置权限acl,可以通过权限来限制用户的访问
