--- a/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
+++ b/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
@@ -70,3 +70,8 @@ tickTime的意义：客户端与服务器或者服务器与服务器之间维持
 6. 删除/修改过时节点,版本号不匹配则会报错
 7. 每个zk节点存储数据不宜过大,几K即可
 8. 节点可以设置权限acl,可以通过权限来限制用户的访问
+
+## Zookeeper数据模型基本操作
+1. 客户端连接,使用`zkServer.sh start`开启服务,使用`zkCli.sh`进入localhost环境的命令行
+2. 查看znode结构,使用`ls /zookeeper`查看zookeeper节点下的子节点数据
+3. 关闭客户端连接
