--- a/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
+++ b/Zookeeper分布式和Dubbo微服务/1.ZooKeeper基础认识与安装使用.md
@@ -75,3 +75,10 @@ tickTime的意义：客户端与服务器或者服务器与服务器之间维持
 1. 客户端连接,使用`zkServer.sh start`开启服务,使用`zkCli.sh`进入localhost环境的命令行
 2. 查看znode结构,使用`ls /zookeeper`查看zookeeper节点下的子节点数据
 3. 关闭客户端连接
+
+## Zookeeper的作用
+1. master节点选举,主节点挂了后,从节点就会接手,并保证这个节点是唯一的,这就是首脑模式,从而保证节点是高可用的
+2. 统一配置文件管理,只需要配置一台服务器,就可以把相同的配置文件同步更新到其他所有服务器(如修改了redis的配置)
+3. 发布订阅,类似MQ,dubbo发布者把数据存在znode上,订阅者会读取这个数据
+4. 分布式锁,分布式环境中不同进程之间争夺资源,类似于多线程中的锁
+5. 集群管理,集群中保证数据的强一致性,客户端读取任意一台zk的时候数据都是一致的
