zk增删改及session基本原理

--- a/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
+++ b/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
@@ -5,3 +5,16 @@
 2. `ls2 /`显示/路径下的节点并显示其节点的状态
 3. `get /`展示/节点下的数据并显示其节点的状态
 4. `stat /`显示其节点的状态
+5. `create /nodename node-data`在/下创建一个持久nodename节点,赋值node-data
+6. `create -e /nodename node-data`在/下创建一个临时nodename节点,赋值node-data,客户端关闭停止心跳后会被自动清除
+7. `create -s /nodename/counter seq`创建以counter为计数累加的节点,result:`Created /nodename/counter0000000001`,最后的1累加
+8. `set /nodename helloworld` 设置/nodename的值为helloworld,然后dataVersion累加
+9. `set /nodename hellowode [versionId]` versionId只能传入当前dataVersion的编号才能设置成功,实现了一个乐观锁
+10. `delete /nodename [versionId]` 删除原理和set相似
+
+## zk session的基本原理
+1. 客户端与服务端之间存在的回话连接
+2. 每个会话都可以设置一个过期的时间
+3. 心跳结束了session就会过期
+4. session过期了临时节点znode会被删除
+5. 心跳机制: 客户端向服务端发送ping请求
