--- a/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
+++ b/Zookeeper分布式和Dubbo微服务/2.Linux下ZK基本操作和acl权限.md
@@ -18,3 +18,24 @@
 3. 心跳结束了session就会过期
 4. session过期了临时节点znode会被删除
 5. 心跳机制: 客户端向服务端发送ping请求
+
+## zk watcher机制
+
+### Watcher概念
+
+1. 针对每个节点的操作,都有一个监督者`Watcher`
+2. 当监控的某个对象(znode)发生了变化,则触发`Watcher`事件
+3. 差不多就是一个`触发器`,一个`一次性的触发器`
+4. 父节点子节点增删改都能触发`Watcher`
+
+### 父节点Watcher操作
+1. `stat path [watch]` 给path设置一个watch创建触发事件,在`create path data`的时候触发
+2. `get path [watch]` 给path设置一个watch删除和修改触发事件,在`delete path`和`set path data`的时候触发
+
+### 子节点Watcher操作
+1. `ls path [watch]` 给path的子节点设置一个创建触发事件,在 `create /path/path2 data`的时候触发`NodeChildrenChanged`
+2. `ls path [watch]` 给path的子节点设置一个删除触发事件,在 `delete[rmr] /path/path2 data`的时候触发`NodeChildrenChanged`
+3. `ls path [watch]` 修改子节点不触发事件
+
+### Watcher使用场景
+统一资源配置,一个节点更新了配置信息之后会触发watcher,再去更新其它节点
